Fixed horizontal scrolling issue

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,6 +3,14 @@
  * (margin/padding adjustments)
  * ------------------------------------- */
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
 
 .tag-flex {
   flex: 0 0 auto;
